# django-tink-fields

./: .bumpversion.cfg  .coveragerc  .gitignore  AUTHORS.md  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  fix_lines.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  runtests.py  setup.py  tox.ini
.github/workflows/: django-tink-fields.yml  release.yml
.pyre/: pyre.stderr
example_project/: manage.py  pytest.ini
example_project/example_app/: __init__.py  apps.py  models.py
example_project/example_app/tests/: __init__.py  test_integration.py
example_project/example_project/: __init__.py  asgi.py  settings.py  wsgi.py
scripts/: release.sh
tink_fields/: __init__.py  config.py  fields.py  models.py
tink_fields/management/commands/: tink.py
tink_fields/migrations/: 0001_initial.py
tink_fields/test/: models.py  test_cleartext_keyset.json  test_coverage.py  test_deterministic_keyset.json  test_fields.py  test_models.py  test_new_features.py  test_plaintext_daead_keyset.json  test_plaintext_keyset.json
tink_fields/test/settings/: base.py  sqlite.py
